--- a/ReactJS-Fundamentals/React-Components/Project-My-Components/my-components-with-create-react-app/public/index.html
+++ b/ReactJS-Fundamentals/React-Components/Project-My-Components/my-components-with-create-react-app/public/index.html
@@ -12,6 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
      <!-- Googles Font Library -->
      <link href="https://fonts.googleapis.com/css?family=Lato|Trirong" rel="stylesheet" type="text/css">
+     <!-- Latest compiled and minified CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+     <!-- Latest compiled JavaScript -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
